<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/empty_space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="@color/actionsheet_overlay"
        app:layout_constraintBottom_toTopOf="@id/action_sheet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.toprest.actionsheetlib.ActionSheet
        android:id="@+id/action_sheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:actionSheetAutoExpand="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                style="@style/EditUserTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/edituser_margin_horizontal"
                android:layout_marginTop="@dimen/edituser_margin_top"
                android:text="@string/edituser_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/edituser_tab_layout_margin_horizontal"
                android:layout_marginTop="@dimen/edituser_tab_layout_margin_top"
                android:background="@color/toprest_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:tabIndicator="@drawable/bg_tab_indicator"
                app:tabIndicatorColor="@color/tab_indicator"
                app:tabIndicatorGravity="stretch"
                app:tabTextAppearance="@style/EditUserTabTextStyle"
                app:tabTextColor="@color/tab_text_color">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/edituser_tab_customer" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/edituser_tab_owner" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/edituser_tab_admin" />
            </com.google.android.material.tabs.TabLayout>

            <com.coinme.formfieldlib.FormFieldView
                android:id="@+id/first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/edituser_field_margin_horizontal"
                android:layout_marginTop="@dimen/edituser_field_margin_vertical"
                android:elevation="@dimen/elevation_8"
                android:hint="@string/edituser_first_name_hint"
                android:minLines="1"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tabs" />

            <com.coinme.formfieldlib.FormFieldView
                android:id="@+id/last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/edituser_field_margin_horizontal"
                android:layout_marginVertical="@dimen/edituser_field_margin_vertical"
                android:elevation="@dimen/elevation_8"
                android:hint="@string/edituser_last_name_hint"
                android:minLines="1"
                android:maxLines="1"
                app:layout_constraintBottom_toTopOf="@id/edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_name" />

            <com.toprest.commonui.view.AccentButton
                android:id="@+id/edit"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginHorizontal="@dimen/edituser_button_margin_horizontal"
                android:text="@string/edituser_button"
                android:enabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.toprest.actionsheetlib.ActionSheet>

    <com.toprest.commonui.view.PlateSpinner
        android:id="@+id/plate_spinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="@dimen/elevation_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
